--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,20 +1,25 @@
-.header{
-    padding: 32px 0px;
-}
-.header-nav__wrapp{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.header {
+  position: relative; 
+  z-index: 100;
+  user-select: none;
+  padding: 32px 0; 
+  border-bottom: 1px solid var(--color-neutral-200);
 }
 
-.header__nav{
-    display: flex;
-    gap: 40px;
+.header-nav__wrapp {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header__nav {
+  display: flex;
+  gap: 4rem; 
 }
 
 .header__link {
   font-weight: var(--font-weight-semibold);
-  font-size: var(--font-size-preset-7);
+  font-size: var(--font-size-preset-7); 
   line-height: var(--line-height-loose);
   color: var(--color-neutral-900);
   text-decoration: none;
@@ -26,4 +31,105 @@
   border-bottom-color: var(--color-orange-500);
 }
 
+/* burger btn*/
+.header__burger {
+  display: none;
+  gap: 2px;
+  flex-direction: column;
+  justify-content: space-between;
 
+  background-color: #E0E6E3;
+  border: none;
+  cursor: pointer;
+
+  padding: 12px 11px;
+  border-radius: 4px;
+}
+
+.header__burger span {
+  display: block;
+  width: 18px;  
+  height: 3px;  
+  background-color: var(--color-neutral-900);
+  border-radius: 2px;
+}
+
+
+/* Modal drop-down menu */
+.header__modal {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-10px);
+  opacity: 0;
+  pointer-events: none;
+
+  width: 100%;
+  max-width: 704px;
+
+  display: flex;
+  justify-content: center;
+
+  transition: all 0.3s ease;
+  z-index: 999;
+}
+
+.header__modal--active {
+  transform: translateX(-50%) translateY(0);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.header__modal-nav {
+  background: var(--color-neutral-0);
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+}
+
+.header__modal-link {
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-preset-7);
+  color: var(--color-neutral-900);
+  text-decoration: none;
+  text-align: left;
+}
+
+/* btn Browse recipes */
+.header__modal-btn {
+  width: 688px;
+  background-color: #163A34;
+  color: white;
+  border: none;
+  border-radius: 0.8rem;
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-preset-7);
+  padding: 12px 0;
+  cursor: pointer;
+  text-align: center;
+  margin: 0 auto; 
+}
+
+.header__modal-btn:hover {
+  opacity: 0.9;
+}
+
+/* adaptiv*/
+@media (max-width: 768px) {
+  .header__nav,
+  .header__actions {
+    display: none;
+  }
+
+  .header__burger {
+    display: flex;
+  }
+
+  .header__modal-btn {
+    width: 100%; 
+  }
+}
