--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,16 +5,12 @@
   padding: 120px 0;
   background-color: #e9ede8;
   border-radius: 16px;
+  overflow: hidden;
 }
 
 .footer__wrapp {
   position: relative;
-  overflow: visible; 
-}
-
-.footer__wrapp {
-  position: relative;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .footer__icon {
@@ -24,14 +20,49 @@
   width: 314px;
   height: auto;
   pointer-events: none;
+  z-index: 0;
 }
 
 .footer__icon--left {
-  left: -76px; 
+  left: -76px;
 }
 
 .footer__icon--right {
-  right: -60px; 
+  right: -60px;
+}
+
+
+.footer__title,
+.footer__desc,
+.footer__made,
+.footer__nav {
+  position: relative;
+  z-index: 1;
+}
+
+@media (max-width: 980px) {
+  .footer__icon {
+    width: 179px;
+    transform: scale(1.1);
+  }
+
+  .footer__icon--left {
+    top: auto;
+    bottom: -30px;
+    left: -40px;
+  }
+
+  .footer__icon--right {
+    top: -44px;
+    bottom: auto;
+    right: -15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer__icon {
+    display: none;
+  }
 }
 
 
@@ -43,15 +74,41 @@
   color: var(--color-neutral-900);
   margin-bottom: 0.75rem;
 }
+@media (max-width: 600px) {
+  .footer__wrapp {
+    padding: 48px 16px; 
+  }
+  .footer__title {
+    font-size: 40px;
+    max-width: 280px; 
+    margin: 0 auto 0.75rem;
+    white-space: normal; 
+    word-break: break-word; 
+    line-height: 1.1;
+  }
+}
 
 .footer__desc {
   font-weight: var(--font-weight-medium);
-  font-size: 20px; 
+  font-size: 20px;
   line-height: var(--line-height-loose);
   letter-spacing: -0.4%;
   color: var(--color-neutral-600);
   margin-bottom: 2.5rem;
 }
+
+@media (max-width: 600px) {
+  .footer__desc {
+      display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; 
+    overflow: hidden; 
+    text-align: center;
+    margin: 0 auto 2rem;
+    max-width: 100%; 
+  }
+}
+
 
 .footer__made {
   user-select: none;
@@ -72,3 +129,26 @@
   display: flex;
   gap: 24px;
 }
+
+
+@media (max-width: 600px) {
+  .footer__nav {
+    flex-direction: column;  
+    align-items: center;      
+    padding: 32px 0 2rem 0;    
+    gap: 24px;               
+  }
+
+  .footer__social {
+    order: 1;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  .footer__made {
+    order: 2;                  
+    text-align: center;
+  }
+}
+
+
